--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,12 @@
     <string name="note">短信验证码激活</string>
     <string name="more_register">更多登录</string>
     <string name="release_number"> V2.0.0.1</string>
+    <string name="login_fast">快速注册</string>
+    <string name="input_tell">请输入您的手机号码</string>
+    <string name="input_tellPhone">请输入手机号</string>
+    <string name="get_verify">获取验证码</string>
+    <string name="button_next">下一步</string>
+    <string name="deal_after"><Data><font color="#FFA1A6B3"> 已有账号，去</font>
+        <font color="#477BEF">登录</font></Data></string>
+    <string name="input_verify">请输入验证码</string>
 </resources>
