--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,9 @@
         <font color="#477BEF">登录</font></Data></string>
     <string name="input_verify">请输入验证码</string>
     <string name="again_send">s后重新发送</string>
+    <string name="network_error">网络错误</string>
+    <string name="login_success">登录成功</string>
+    <string name="login_failure">登录失败</string>
+    <string name="register_success">注册成功</string>
+    <string name="register_failure">注册成功</string>
 </resources>
