--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="register_success">注册成功</string>
     <string name="register_failure">注册失败</string>
     <string name="have_sent_msg">验证码已发送，请注意查收</string>
+    <string name="tell_true">请输入十一位手机号码</string>
 </resources>
